<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--titles-->
    <string name="app_name" translatable="false">Weather Alarm Clock</string>
    <string name="action_settings" >Settings</string>
    <string name="ringActivityTitle">Ring selection</string>
    <string name="remindActivityTitle">Choose type of remind</string>
    <string name="repeatChoiceActivityTitle">Repeat days</string>
    <string name="deleteActivityTitle">Confirm to delete?</string>
    <string name="addAlarmActivityTitle">Add alarm</string>
    <string name="editAlarmActivityTitle">Edit alarm</string>

    <!--alarm utils-->
    <string name="saturday">Sat</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tue</string>
    <string name="monday">Mon</string>
    <string name="sunday">Sun</string>
    <string name="timeNull" translatable="false">--:--</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="failure_network">Failure network connection</string>

    <!--alarm activity-->
    <string name="time" translatable="false">00</string>
    <string name="timePoint" translatable="false">:</string>
    <string name="alarmSwitchWeather">Include weather</string>
    <string name="alarmSwitchVibration">Vibration</string>
    <string name="alarmRepeat">Repeat</string>
    <string name="alarmRepeatChoice">Only once</string>
    <string name="alarmRingtone">Ringtone</string>
    <string name="alarmRingChoice" translatable="false">Raindrop</string>
    <string name="alarmRemind">Later remind</string>
    <string name="alarm_remind_content">Three minutes</string>

    <!--remind activity-->
    <string name="remindThreeMinutes">Three minutes</string>
    <string name="remindFiveMinutes">Five minutes</string>
    <string name="remindTenMinutes">Ten minutes</string>
    <string name="remindTwentyMinutes">Twenty minutes</string>
    <string name="remindHalfHour">Half an hour</string>

    <!--repeat activity-->
    <string name="repeatActivityTitle">Repeat time</string>
    <string name="repeatOnce">Only once</string>
    <string name="repeatWeekDay">Week days</string>
    <string name="repeatEveryDay">Every day</string>
    <string name="repeatWeekend">Weekend</string>
    <string name="repeatChoice">Your choice</string>

    <!--settings activity-->
    <string name="settings_weather">Weather</string>

    <string name="settings_location_city_title">Change city</string>
    <string name="settings_location_city_summary">Currently: %s</string>
    <string name="pref_city_default">Ivano-Frankivsk</string>
    <string name="pref_city_key" translatable="false">settings_edit_city_name</string>

    <string name="pref_temp_format_title">Temperature Format</string>
    <string name="pref_default_temp_format" translatable="false">Celsius</string>
    <string name="pref_temp_format_key" translatable="false">settings_list_temp_format</string>
    <string name="pref_temp_celsius" translatable="false">Celsius</string>
    <string name="pref_temp_fahrenheit" translatable="false">Fahrenheit</string>
    <string name="current_weather">Current Weather</string>
    <string name="weather_update">Weather is updating…</string>
    <string name="cel" translatable="false">" °C"</string>
    <string name="fahr" translatable="false">" °F"</string>
    <string-array name="pref_temp_format_value" translatable="false">
        <item>Fahrenheit</item>
        <item>Celsius</item>>
    </string-array>
    <string-array name="pref_temp_format" translatable="false">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
    <string name="alarmRemindChoice">Three minutes</string>


</resources>