<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorDarkerGray" />

    <TextView
        android:id="@+id/repeat_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/sunday"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/repeat_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/repeat_sun"
        android:gravity="center_horizontal"
        android:text="@string/monday"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/repeat_tue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/repeat_mon"
        android:gravity="center_horizontal"
        android:text="@string/tuesday"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/repeat_wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/repeat_tue"
        android:gravity="center_horizontal"
        android:text="@string/wednesday"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/repeat_thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/repeat_wed"
        android:gravity="center_horizontal"
        android:text="@string/thursday"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/repeat_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/repeat_thu"
        android:gravity="center_horizontal"
        android:text="@string/friday"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/repeat_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/repeat_fri"
        android:gravity="center_horizontal"
        android:text="@string/saturday"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/repeat_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/colorRed_500"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/repeat_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/OK"
            android:textColor="@color/colorRed_500"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>