<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorDarkerGray" />

    <TextView
        android:id="@+id/repeat_once"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="monospace"
        android:text="@string/repeatOnce"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/repeat_weekday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_once"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="monospace"
        android:text="@string/repeatWeekDay"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/repeat_everyday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_weekday"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="monospace"
        android:text="@string/repeatEveryDay"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/repeat_weekend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_everyday"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="monospace"
        android:text="@string/repeatWeekend"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/repeat_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_weekend"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="monospace"
        android:text="@string/repeatChoice"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</RelativeLayout>