<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCustom"
                android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/alarm_cv_time"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_below="@id/include_toolbar"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/alarm_time_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="monospace"
                android:text="@string/time"
                android:textColor="@color/colorRed_500"
                android:textSize="80sp"/>

            <TextView
                android:id="@+id/add_picker_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/alarm_time_hours"
                android:fontFamily="monospace"
                android:text="@string/timePoint"
                android:textColor="@color/colorRed_500"
                android:textSize="70sp"/>

            <TextView
                android:id="@+id/alarm_time_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/add_picker_divide"
                android:fontFamily="monospace"
                android:text="@string/time"
                android:textColor="@color/colorRed_500"
                android:textSize="80sp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/alarm_cv_time"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:id="@+id/alarm_cv_weather"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/weather_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarmSwitchWeather"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"/>

                    </LinearLayout>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="25dp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/alarm_cv_repeat"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/alarm_cv_vibration"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="4dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="65dp"
                    android:background="@color/colorCustom"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/repeat_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarmRepeat"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/repeat_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarmRepeatChoice"
                            android:textColor="@color/colorRed_500"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="25dp"
                        android:adjustViewBounds="true"
                        app:materialIcon="chevron_down"
                        app:materialIconColor="@color/colorRed_500"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/alarm_cv_remind"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/alarm_cv_ring"
                android:layout_marginBottom="64dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="4dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="65dp"
                    android:background="@color/colorCustom"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/remind_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarmRemind"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/remind_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarm_remind_content"
                            android:textColor="@color/colorRed_500"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="25dp"
                        android:adjustViewBounds="true"
                        app:materialIcon="chevron_down"
                        app:materialIconColor="@color/colorRed_500"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/alarm_cv_vibration"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/alarm_cv_weather"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/vibration_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarmSwitchVibration"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"/>

                    </LinearLayout>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_vibration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="25dp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/alarm_cv_ring"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/alarm_cv_repeat"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="4dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="65dp"
                    android:background="@color/colorCustom"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/ringtones_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarmRingtone"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/ringtones_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="monospace"
                            android:text="@string/alarmRingChoice"
                            android:textColor="@color/colorRed_500"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="25dp"
                        android:adjustViewBounds="true"
                        app:materialIcon="chevron_down"
                        app:materialIconColor="@color/colorRed_500"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        android:src="@drawable/alarm_check"/>

</RelativeLayout>